--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 </head>
 <body>
 <header>
-    <button class="btn-cart" type="button">Корзина</button>
+    <div class="cart">
+        <form action="" class="search-form">
+            <input type="text" class="search-field">
+            <button class="btn-search" type="submit"><i class="fas fa-search"></i></button>
+        </form>
+        <button class="btn-cart" type="button">Корзина</button>
+        <div class="cart-block invisible"></div>
+    </div>
 </header>
 <main>
     <div class="products"></div>
 </main>
+<script src="https://kit.fontawesome.com/572ec8678c.js" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
