--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="app">
 <header>
     <div class="cart">
-        <form action="" class="search-form" :submit.prevent="filterGoods()">
+        <form action="" class="search-form" :submit.prevent="filterGoods">
             <input type="text" class="search-field" v-model="searchLine">
             <button class="btn-search" type="submit" ><i class="fas fa-search"></i></button>
         </form>
