--- a/index.html
+++ b/index.html
@@ -10,17 +10,31 @@
 <div id="app">
 <header>
     <div class="cart">
-        <form action="" class="search-form" :submit.prevent="filterGoods">
+        <form action="" class="search-form" @submit.prevent="filter">
             <input type="text" class="search-field" v-model="searchLine">
             <button class="btn-search" type="submit" ><i class="fas fa-search"></i></button>
         </form>
-        <button class="btn-cart" type="button">Корзина</button>
-        <div class="cart-block invisible"></div>
+        <button class="btn-cart" type="button" @click="showCart = !showCart">Корзина</button>
+        <div class="cart-block" v-show="showCart">
+            <p v-if="!cartItems.length">Корзина пуста</p>
+            <div class="cart-item" v-for="item of cartItems" :key="item.id_product">
+                <div class="product-bio">
+                    <img :src="imgCart" alt="Some image">
+                    <div class="product-desc">
+                        <p class="product-title">{{item.product_name}}</p>
+                        <p class="product-quantity">Количество {{item.quantity}}</p>
+                        <p class="product-single-price">{{item.price}}RUB за единицу</p>
+                        <p class="product-price">{{item.quantity*item.price}}RUB</p>
+                        <button class="del-btn" @click="remove(item)">x</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </header>
 <main>
     <div class="products">
-        <div class="product-item" v-for="product of products" :key="product.id_product">
+        <div class="product-item" v-for="product of filtered" :key="product.id_product">
             <img :src="imgCatalog" alt="Some img">
             <div class="desc">
                 <h3>{{product.product_name}}</h3>
